--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1943,6 +1943,64 @@ body {
     padding: 0 2rem 2rem 2rem !important;
   }
 }
+.cid-qwBUAJVUuq {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background: linear-gradient(45deg, #177396, #ca2955);
+}
+.cid-qwBUAJVUuq .list-group-item {
+  padding: .75rem 3.25rem;
+}
+.cid-qwBUAJVUuq .plan {
+  word-break: break-word;
+  position: relative;
+  max-width: 300px;
+  padding-right: 0;
+  padding-left: 0;
+  color: #767676;
+}
+.cid-qwBUAJVUuq .plan .list-group-item {
+  position: relative;
+  -webkit-justify-content: center;
+  justify-content: center;
+  border: 0;
+}
+.cid-qwBUAJVUuq .plan .list-group-item::after {
+  position: absolute;
+  bottom: 0;
+  left: 20%;
+  width: 60%;
+  height: 2px;
+  content: "";
+  background-color: #eaeaea;
+}
+.cid-qwBUAJVUuq .plan .list-group-item:last-child::after {
+  display: none;
+}
+.cid-qwBUAJVUuq .plan-header {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-qwBUAJVUuq .plan-header,
+.cid-qwBUAJVUuq .plan-body {
+  background-color: #fff;
+}
+.cid-qwBUAJVUuq .price-figure {
+  font-weight: 700;
+  color: #232323;
+}
+.cid-qwBUAJVUuq .price-value {
+  font-weight: 700;
+  vertical-align: top;
+}
+@media (max-width: 550px) {
+  .cid-qwBUAJVUuq .price-figure {
+    font-size: 4.25rem;
+  }
+}
+.cid-qwBUAJVUuq UL {
+  text-align: center;
+}
 .cid-qw1Pt4s8bi {
   padding-top: 15px;
   padding-bottom: 30px;
