--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1721,6 +1721,21 @@ body {
     padding-top: 3rem;
   }
 }
+.cid-qwEeqytSzD {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background: linear-gradient(0deg, #7fdbfd, #6670a9);
+}
+.cid-qwEeqytSzD .mbr-iconfont-social {
+  font-size: 32px;
+  color: #ff3366;
+}
+.cid-qwEeqytSzD .social-list a:focus {
+  text-decoration: none;
+}
+.cid-qwEeqytSzD H2 {
+  color: #ffffff;
+}
 .cid-qwiFj6Io9F {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -1860,7 +1875,7 @@ body {
 .cid-qvTbBSp4os {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #879a9f;
+  background-color: #b2ccd2;
 }
 .cid-qvTbBSp4os .mbr-slider .carousel-control {
   background: #1b1b1b;
@@ -1903,7 +1918,7 @@ body {
 .cid-qw1PlGtSUM {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-image: url("../../../assets/images/background3.jpg");
+  background-image: url("../../../assets/images/mbr-1620x1080.jpg");
 }
 .cid-qw1PlGtSUM .testimonials-container {
   margin: 0 auto;
