--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -207,19 +207,19 @@ body {
 .btn-success:active {
   background-color: #f7ed4a;
   border-color: #f7ed4a;
-  color: #ffffff;
+  color: #3f3c03;
 }
 .btn-success:hover,
 .btn-success:focus,
 .btn-success.focus,
 .btn-success.active {
-  color: #ffffff;
+  color: #3f3c03;
   background-color: #eadd0a;
   border-color: #eadd0a;
 }
 .btn-success.disabled,
 .btn-success:disabled {
-  color: #ffffff !important;
+  color: #3f3c03 !important;
   background-color: #eadd0a !important;
   border-color: #eadd0a !important;
 }
@@ -270,21 +270,21 @@ body {
 .btn-white:active {
   background-color: #ffffff;
   border-color: #ffffff;
-  color: #ffffff;
+  color: #808080;
 }
 .btn-white:hover,
 .btn-white:focus,
 .btn-white.focus,
 .btn-white.active {
-  color: #ffffff;
-  background-color: #d4d4d4;
-  border-color: #d4d4d4;
+  color: #808080;
+  background-color: #d9d9d9;
+  border-color: #d9d9d9;
 }
 .btn-white.disabled,
 .btn-white:disabled {
-  color: #ffffff !important;
-  background-color: #d4d4d4 !important;
-  border-color: #d4d4d4 !important;
+  color: #808080 !important;
+  background-color: #d9d9d9 !important;
+  border-color: #d9d9d9 !important;
 }
 .btn-black,
 .btn-black:active {
@@ -376,13 +376,13 @@ body {
 .btn-success-outline:focus,
 .btn-success-outline.focus,
 .btn-success-outline.active {
-  color: #ffffff;
+  color: #3f3c03;
   background-color: #f7ed4a;
   border-color: #f7ed4a;
 }
 .btn-success-outline.disabled,
 .btn-success-outline:disabled {
-  color: #ffffff !important;
+  color: #3f3c03 !important;
   background-color: #f7ed4a !important;
   border-color: #f7ed4a !important;
 }
@@ -4487,6 +4487,683 @@ body {
 }
 .cid-qGAgOMD2hF .mbr-text P {
   color: #232323;
+}
+.cid-qw1Q7680qB {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #19277f;
+}
+.cid-qw1Q7680qB .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-qw1Q7680qB .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-qw1Q7680qB .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-qw1Q7680qB .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-qw1Q7680qB .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-qw1Q7680qB .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-qw1Q7680qB .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-qw1Q7680qB .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-qw1Q7680qB .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-qw1Q7680qB .media-container-row .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+.cid-qw1Q7680qB .media-container-row .row-copirayt {
+  word-break: break-word;
+}
+.cid-qHjJM68c3l .mbr-text,
+.cid-qHjJM68c3l .typed-text,
+.cid-qHjJM68c3l .mbr-section-text {
+  letter-spacing: 0.03rem;
+}
+.cid-qHjJM68c3l .btn {
+  margin-left: 4px !important;
+}
+.cid-qHjJM68c3l .animated-element {
+  color: #ffbc00;
+}
+.cid-qHjJM68c3l .typed-cursor {
+  opacity: 1;
+  -webkit-animation: blink 0.7s infinite;
+  -moz-animation: blink 0.7s infinite;
+  animation: blink 0.7s infinite;
+  color: #ffbc00;
+}
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-moz-keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.cid-qHjJM68c3l SPAN {
+  color: #ffffff;
+}
+.cid-qHjSBfD9gk {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-qHjSBfD9gk .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-qHjSBfD9gk .section-text {
+  padding: 2rem 0;
+}
+.cid-qHjSBfD9gk .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qHjSBfD9gk .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-qvReov55SN .navbar {
+  padding: .5rem 0;
+  background: #19277f;
+  transition: none;
+  min-height: 77px;
+}
+.cid-qvReov55SN .navbar-dropdown.bg-color.transparent.opened {
+  background: #19277f;
+}
+.cid-qvReov55SN a {
+  font-style: normal;
+}
+.cid-qvReov55SN .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  top: -0.2em;
+  text-decoration: none;
+}
+.cid-qvReov55SN .nav-item a {
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+}
+.cid-qvReov55SN .btn {
+  padding: 0.4rem 1.5rem;
+  display: inline-flex;
+  align-items: center;
+}
+.cid-qvReov55SN .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-qvReov55SN .menu-logo {
+  margin-right: auto;
+}
+.cid-qvReov55SN .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+}
+.cid-qvReov55SN .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-qvReov55SN .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-qvReov55SN .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-qvReov55SN .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-qvReov55SN .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-qvReov55SN .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-qvReov55SN .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-qvReov55SN .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-qvReov55SN .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-qvReov55SN .dropdown .dropdown-menu {
+  background: #19277f;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-qvReov55SN .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-qvReov55SN .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-qvReov55SN .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-qvReov55SN .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-qvReov55SN .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-qvReov55SN .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-qvReov55SN .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-qvReov55SN .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-qvReov55SN .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-qvReov55SN .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-qvReov55SN .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-qvReov55SN button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-qvReov55SN button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-qvReov55SN button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-qvReov55SN button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-qvReov55SN button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qvReov55SN button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qvReov55SN button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-qvReov55SN nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qvReov55SN nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-qvReov55SN nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-qvReov55SN nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qvReov55SN .collapsed.navbar-expand {
+  flex-direction: column;
+}
+.cid-qvReov55SN .collapsed .btn {
+  display: flex;
+}
+.cid-qvReov55SN .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-qvReov55SN .collapsed .navbar-collapse.collapsing,
+.cid-qvReov55SN .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-qvReov55SN .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-qvReov55SN .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-qvReov55SN .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-qvReov55SN .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-qvReov55SN .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-qvReov55SN .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-qvReov55SN .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-qvReov55SN .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-qvReov55SN .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-qvReov55SN .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-qvReov55SN .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-qvReov55SN .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-qvReov55SN .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-qvReov55SN .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-qvReov55SN .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-qvReov55SN .navbar-expand {
+    flex-direction: column;
+  }
+  .cid-qvReov55SN img {
+    height: 3.8rem !important;
+  }
+  .cid-qvReov55SN .btn {
+    display: flex;
+  }
+  .cid-qvReov55SN button.navbar-toggler {
+    display: block;
+  }
+  .cid-qvReov55SN .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-qvReov55SN .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-qvReov55SN .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-qvReov55SN .navbar-collapse.collapsing,
+  .cid-qvReov55SN .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-qvReov55SN .navbar-collapse.collapsing .navbar-nav,
+  .cid-qvReov55SN .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-qvReov55SN .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-qvReov55SN .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-qvReov55SN .navbar-collapse.collapsing .navbar-buttons,
+  .cid-qvReov55SN .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-qvReov55SN .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-qvReov55SN .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-qvReov55SN .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-qvReov55SN .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-qvReov55SN .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-qvReov55SN .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-qvReov55SN .menu-logo {
+    flex-shrink: 0;
+  }
+}
+.cid-qHjGsQiXHv {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-qHjGsQiXHv .card-title {
+  letter-spacing: 0.03em;
+  color: #232323;
+  margin: 0;
+  padding: 0;
+}
+.cid-qHjGsQiXHv .card {
+  margin-bottom: 2rem;
+}
+.cid-qHjGsQiXHv .card-box {
+  padding-top: 2rem;
+}
+.cid-qHjGsQiXHv .card-box p {
+  color: #444;
+  letter-spacing: 0.03em;
+  margin: 0;
+  padding-bottom: 1.5rem;
+}
+.cid-qHjGsQiXHv .btn {
+  margin: .3rem;
+}
+.cid-qHjGsQiXHv .mbr-section-title {
+  margin: 0;
+}
+.cid-qHjGsQiXHv .card-underline,
+.cid-qHjGsQiXHv .underline {
+  margin-top: -0.5rem;
+  margin-bottom: -0.5rem;
+}
+.cid-qHjGsQiXHv .card-underline .line,
+.cid-qHjGsQiXHv .underline .line {
+  width: 3rem;
+  height: 2px;
+  background: #444444;
+  display: inline-block;
+}
+.cid-qHjGsQiXHv .card-underline {
+  margin-bottom: 1.5rem;
+  margin-top: 0 !important;
+}
+.cid-qHjGsQiXHv .card-underline .line {
+  background: #ffbc00;
+}
+.cid-qHjGxkdcAu {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-qHjGxkdcAu .icon-transition span {
+  padding: 0.1rem 0.9rem;
+  border-radius: 50%;
+  color: #232323;
+  display: block;
+  height: 3em;
+  line-height: 3em;
+  width: 3em;
+  background: #ffffff none repeat scroll 0 0;
+  -webkit-transition: all 0.3s ease-out 0s;
+  transition: all 0.3s ease-out 0s;
+  font-size: 14px;
+}
+.cid-qHjGxkdcAu .content-row {
+  flex-direction: row-reverse;
+}
+.cid-qHjGxkdcAu .photo-split {
+  padding: 0;
+}
+.cid-qHjGxkdcAu .photo-split img {
+  width: 100%;
+}
+.cid-qHjGxkdcAu .icon-transition span:hover {
+  background-color: #ffbc00;
+}
+.cid-qHjGxkdcAu .counter-container ul {
+  display: -webkit-flex;
+  flex-direction: column;
+}
+.cid-qHjGxkdcAu .counter-container ul li {
+  margin-bottom: .5rem;
+  list-style: ✓;
+}
+.cid-qHjGxkdcAu .counter-container ul li:before {
+  color: #ffbc00;
+  display: inline-block;
+  content: '✓';
+  text-align: center;
+  line-height: 1.5em;
+  transition: all .2s;
+  width: 25px;
+  height: 25px;
+}
+.cid-qHjGxkdcAu .wrap-block {
+  padding: 3rem 3rem;
+}
+.cid-qHjGxkdcAu .wrap-block ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.cid-qHjGxkdcAu .wrap-block ul li {
+  display: inline-block;
+}
+.cid-qHjGxkdcAu .wrap-block ul li span {
+  text-align: center;
+}
+.cid-qHjGxkdcAu .social-media {
+  margin-top: 1.5em;
+  padding: 0;
+}
+.cid-qHjGxkdcAu .social-media ul {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 8px;
+}
+.cid-qHjGxkdcAu .social-media ul li {
+  padding: 4px;
+  display: inline-block;
+}
+.cid-qHjGxkdcAu .mbr-list,
+.cid-qHjGxkdcAu .social-media ul {
+  text-align: left;
+}
+@media (max-width: 500px) {
+  .cid-qHjGxkdcAu .wrap-block {
+    padding: 3rem 1rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-qHjGxkdcAu .mbr-section-title,
+  .cid-qHjGxkdcAu .mbr-section-subtitle,
+  .cid-qHjGxkdcAu .mbr-text {
+    text-align: center !important;
+  }
+  .cid-qHjGxkdcAu .social-list {
+    text-align: center !important;
+  }
+}
+.cid-qHjGyTAq0S {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-qHjGyTAq0S .mbr-section-heading {
+  margin-bottom: 1.5em;
+}
+.cid-qHjGyTAq0S .input-main {
+  width: 99.6%;
+  margin-left: .1em;
+}
+.cid-qHjGyTAq0S .form-1 {
+  margin: 0 1em;
+  padding: 0;
+}
+.cid-qHjGyTAq0S .input-wrap {
+  padding: 0;
+  margin-bottom: 1.3em;
+}
+.cid-qHjGyTAq0S .input-wrap input {
+  border: 1px solid #ddd;
+  padding-left: .5em;
+  height: 2.5em;
+  width: 96%;
+}
+.cid-qHjGyTAq0S .form-group textarea {
+  height: 15em;
+  background-color: white;
+  padding: 0.5em 0.6em;
+  width: 98%;
 }
 .cid-qw1Q7680qB {
   padding-top: 30px;
